backends/drm: immediately force a modeset on bad link status

In the past this happened automatically, as we did an atomic modeset test in
DrmGpu::updateOutputs, but now we need to do it explicitly.

BUG: 502542


(cherry picked from commit 6d8f78b2c579cada21e795a9c386068dd0168ac8)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>